// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service component render 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row"
  >
    <div
      className="col-md-1 col-xs-1"
    >
      service
      <a
        className="glyp-button"
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-pencil"
        />
      </a>
    </div>
    <div>
      <div
        className="col-md-2 col-xs-2"
      >
        <Gate
          environment="environment1"
          group="group"
          service="service"
        />
      </div>
      <div
        className="col-md-2 col-xs-2"
      >
        <Gate
          environment="environment2"
          group="group"
          service="service"
        />
      </div>
      <div
        className="col-md-2 col-xs-2"
      >
        <Gate
          environment="environment3"
          group="group"
          service="service"
        />
      </div>
      <div
        className="col-md-2 col-xs-2"
      />
    </div>
  </div>
</div>
`;

exports[`load from state should load the state correctly 1`] = `
<div
  className="container-fluid"
>
  <div
    className="row"
  >
    <div
      className="col-md-1 col-xs-1"
    >
      gatekeeper
      <a
        className="glyp-button"
        onClick={[Function]}
      >
        <span
          className="glyphicon glyphicon-pencil"
        />
      </a>
    </div>
    <div />
  </div>
</div>
`;
